fixed alignment

--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -79,6 +79,8 @@
       padding-left: 4em;
       position: relative;
       right: 7em;
+      margin: 8% 0;
+      vertical-align: -webkit-baseline-middle;
 
       @include intro {
         display: inline-block;
@@ -109,21 +111,23 @@
   .crossphoto {
       float: left;
       position: relative;
-      top: 20px;
       box-sizing: border-box;
       width: 45%;
-      margin-left: 15px;
-      margin-bottom: 70px;
+      margin-left: 5%;
+      margin-bottom: 7%;
+      margin-top: 7%;
       display: flex;
       justify-content: center;
+      vertical-align: -webkit-baseline-middle;
 
         @include intro {
           display: inline-block;
           position: relative;
-          left: 24%;
+          left: 30%;
           float: none; 
           margin: 0;
-          width: 50%;
+          margin-top: 2em;
+          width: 70%;
           padding-bottom: 4em;
         } 
   }
