--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,8 @@
   padding-left: 4em;
   position: relative;
   right: 7em;
+  margin: 8% 0;
+  vertical-align: -webkit-baseline-middle;
 }
 
 @media (max-width: 960px) {
@@ -120,28 +122,30 @@
 .crossphoto {
   float: left;
   position: relative;
-  top: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 45%;
-  margin-left: 15px;
-  margin-bottom: 70px;
+  margin-left: 5%;
+  margin-bottom: 7%;
+  margin-top: 7%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  vertical-align: -webkit-baseline-middle;
 }
 
 @media (max-width: 960px) {
   .crossphoto {
     display: inline-block;
     position: relative;
-    left: 24%;
+    left: 30%;
     float: none;
     margin: 0;
-    width: 50%;
+    margin-top: 2em;
+    width: 70%;
     padding-bottom: 4em;
   }
 }
